public/stylesheets/style.css
/* STRUCTURE
GENERAL
PAGES
RESPONSIVE
 */

/* GENERAL */

/* Overall */
body {
    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
    color: #545454 !important;
    height: 100%;
}

h1, h2, h3, h4 {
    padding-top: 24px;
    padding-bottom: 6px;
    color: #545454 !important;
}

a {
    color: #E1003A !important;
}

.container {
    max-width: 900px!important;
}

.width-full {
    width: 100%;
}

.checkbox {
    margin-right: 9px !important;
    margin-left: 6px !important;
}

label {
    margin-top: 12px;
}

input[type=checkbox] {
    z-index: 1;
    -ms-transform: scale(2.4); /* IE */
    -moz-transform: scale(2.4); /* FF */
    -webkit-transform: scale(2.4); /* Safari and Chrome */
    -o-transform: scale(2.4); /* Opera */
    transform: scale(2.4);
}

/* Navbar */
nav ul a {
    text-align: center;
    font-size: 16px !important;
    padding: 12px !important;
    color: #fbfbfb !important;
}

.nav-profile-link {
    padding: 0;
    margin: 0;
}



nav a:hover, .logo-text:hover {
    color: #E1003A !important;
}

nav .border-none {
    border: none !important;
}

nav li:hover a {
    cursor: pointer;
}

.logo-picture {
    margin-top: 3px;
}

.logo-text {
    text-align: left;
    color: white;
    padding-left: 9px;
    font-weight: normal;
}

/* Footer */
footer {
    position: relative;
    bottom: 0;
    color: #545454;
    padding-top: 24px;
    padding-bottom: 42px;
}

footer > div {
    padding: 0 24px;
}

/* Buttons */
.button {
    display: block;
    background: #E1003A;
    padding: 12px 36px;
    margin: 24px 0 6px 0;
    border-radius: 3px;
    color: white;
    border: none;
}

.button-small {
    display: block;
    background: #E1003A;
    padding: 8px 36px;
    border-radius: 3px;
    color: white !important;
    border: none;
}

.button-exams-table {
    display: block;
    background: white;
    padding: 8px 24px;
    border: 2px solid #E1003A;
    border-radius: 3px;
    color: #E1003A !important;
    white-space:nowrap;
}

.button-delete-selected-courses > img{
    padding-right: 9px;
}

.button-table-search {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: stretch;
    align-content: stretch;
    flex-flow: nowrap !important;
    margin-right: 12px;
    background: #E1003A;
    border-radius: 3px;
    border-top: 2px solid #E1003A;
    border-bottom: 3px solid #E1003A;
    border-left: 3px solid #E1003A;
    border-right: 3px solid #E1003A;
}

.icon {
    display: block;
    background: #E1003A;
    padding: 6px 12px 9px 12px;
    border-radius: 3px;
    color: white !important;
    border: none;
}

.button:hover {
    background: #f22e4e;
}

/*Table */

/* Always display scrollbar on mobile */
.table-responsive::-webkit-scrollbar {
    -webkit-appearance: none;
}

.table-responsive::-webkit-scrollbar:vertical {
    width: 12px;
}

.table-responsive::-webkit-scrollbar:horizontal {
    height: 12px;
}

.table-responsive::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, .5);
    border-radius: 10px;
    border: 2px solid #ffffff;
}

.table-responsive::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
}

.headline-table {
    font-size: 18px;
    font-weight: normal;
    white-space:nowrap;
    margin-right: 12px;
}

.thead-dark > tr > th {
    background: #E1003A !important;
    border-bottom: #f78ba8 2px solid !important;
}

.thead-dark > tr {
    border-top: #f78ba8 2px solid;
}

.thead-dark {
    border-bottom: #f78ba8 2px solid !important;
}

td, th {
    white-space: nowrap;
}

td {
    padding: 9px 9px 12px 9px !important;
}

table input[type=checkbox] {
    position: relative;
    top: 3px;
    left: 27px;

}


/* Login */
.main-login {
    margin: 24px 0 0 0;
    max-width: 576px !important;
}

/* Dashboard */
.list-group-item-action p {
    color: #545454;
}

.list-time {
    font-weight: bold;
}

/* Exams */
.nav-link.active {
    color: white !important;
    background: #E1003A !important;
}

.icon-enroll-courses {
    position: relative;
    top: 2px;
    display: inline-block;
    line-height: 20px;
    font-size: 28px;
    padding-right: 9px;
    font-weight: normal;
}


/* RESPONSIVE */

/* Mobile */
@media (max-width: 992.98px) {

    nav ul li:not(:last-child) {
        border-bottom: #40464b 2px solid;
    }

    #nav-profile-mobile {
        display: none;
    }

    #nav-profile-desktop {
        display: inline-block;
    }
}

/* Desktop */
@media (min-width: 993px) {
    #nav-profile-mobile {
        display: inline-block;
        cursor: pointer;
        height: 36px;
    }

    #nav-profile-desktop {
        display: none;
    }

}

/* Exceptions */
@media (max-width: 575.98px) {
    .button-table-search {
        width: 100% !important;
    }

    .button-table-search > input {
        width: 100% !important;
    }

    .button-exams-table {
        width: 100% !important;
    }
}

@media (min-width: 576px) {
    .button-table-search {
        width: 240px;
    }

    .button-table-search > input {
        width: 192px !important;
    }

    .buttons-distribution-table {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: space-between;
        align-items: center;
        align-content: stretch;
    }
}

